(after removing the "K"):

	https://kenai.com/bugzilla/


		  CHANGES IN THE 1.5.3 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.5.3 release.

K  6407	calling IdleManager.watch twice on same folder fails
K  6496	Message-Id leaks current user/hostname of the Java process (security)
K  6498	IMAP idle breaks interrupt flag


		  CHANGES IN THE 1.5.2 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.5.2 release.

K  5820	allow IMAP search to throw SearchException when search is too complex
K  6181	NullPointerException at IMAPFolder#getMessagesByUID if msg not found
K  6201	add option to use canonical host name for SASL
K  6203	IMAP astring parsing incorrect
K  6207	SMTP SASL support doesn't handle authentication failure properly
K  6208	SASL authentication failures should not try other methods
K  6238	add OAuth2 support to JavaMail
K  6260	IMAP failures during close can leave connection unusable
K  6261	need way to monitor IMAP responses
K  6274	MimeUtility.encodeText() does not work with Unicode surrogate pairs
K  6283	IMAP alerts and notifications are not sent during authentication
K  6324	add ability to fetch and cache entire IMAP message
K  6325	add ability to return server-specific STATUS responses
K  6326	add ability to set "peek" flag for all IMAP messages
K  6327	add ability to specify scope of event queue
K  6328	add ability to specify an Executor to process events
K  6336	handle multiple IMAP BODY elements in a single FETCH response
K  6352	add more efficient way to monitor multiple folders for new messages
K  6353	Include a subject formatter for the logging package
K  6365	Broken equals in URLName, NewsAddress
K  6366	NullPointerException in ContentType.match
K  6367	hashCode of two equals instances does not match for ModifiedSinceTerm,
	YoungerTerm, OlderTerm
K  6368	NullPointerException in InternetAddress


		  CHANGES IN THE 1.5.1 RELEASE
		  ----------------------------