@@ -21,6 +21,7 @@ The following bugs have been fixed in the 1.5.3 release.
 K  6407	calling IdleManager.watch twice on same folder fails
 K  6496	Message-Id leaks current user/hostname of the Java process (security)
 K  6498	IMAP idle breaks interrupt flag
+K  6526	Date search terms result in wrong greater-than SEARCH commands for IMAP
 
 
 		  CHANGES IN THE 1.5.2 RELEASE
